Start mqtt service in foreground

--- a/org.eclipse.paho.android.service/src/main/res/values/strings.xml
+++ b/org.eclipse.paho.android.service/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    
+    <string name="mqtt_service_foreground_notification">org.eclipse.paho.android.service.MqttService.FOREGROUND_NOTIFICATION</string>
 
 </resources>
